# SuperDev

week1/Custom-Macro-SD/: Cargo.toml
week1/Custom-Macro-SD/app/src/: main.rs
week1/Custom-Macro-SD/serialize_macro/: Cargo.toml
week1/Custom-Macro-SD/serialize_macro/src/: lib.rs
week1/Serialise-Without-Macro/src/: main.rs  traits.rs
week1/assign2/program/: Cargo.toml
